@@ -254,7 +254,7 @@ public class IsopretServiceImpl implements IsopretService  {
             LOGGER.error("Could not find HBADEALS results for {}.", symbol);
             return null;
         }
-        List<Transcript> transcripts = this.geneSymbolToTranscriptMap.get(symbol);
+        List<Transcript> transcripts = this.geneSymbolToTranscriptMap.getOrDefault(symbol, List.of());
         HbaDealsResult result = thresholder.getRawResults().get(symbol);
         double splicingThreshold = thresholder.getSplicingPepThreshold();
         double expressionThreshold = thresholder.getExpressionPepThreshold();
@@ -277,7 +277,7 @@ public class IsopretServiceImpl implements IsopretService  {
         List<HbaDealsResult> results = thresholder.getRawResults().values()
                 .stream()
                 .sorted()
-                .collect(Collectors.toList());
+                .toList();
         for (HbaDealsResult result : results) {
             if (! this.geneSymbolToTranscriptMap.containsKey(result.getSymbol())) {
                 notfound++;
@@ -430,12 +430,12 @@ public class IsopretServiceImpl implements IsopretService  {
         List<HbaDealsResult> dge = this.thresholder.getRawResults().values()
                 .stream()
                 .filter(h -> h.hasDifferentialExpressionResult(expThres))
-                .collect(Collectors.toList());
+                .toList();
         // now figure out which of these genes are annotated to goId
         Set<TermId> domainIdSet = this.geneContainer.getDomainItemsAnnotatedByGoTerm(goId);
         List<String> symbols = dge.stream().filter(d -> domainIdSet.contains(d.getGeneAccession().toTermId()))
                 .map(HbaDealsResult::getSymbol)
-                .collect(Collectors.toList());
+                .toList();
         // transform to visualizable
         List<Visualizable> visualizables = new ArrayList<>();
         for (String sym : symbols) {
@@ -447,15 +447,26 @@ public class IsopretServiceImpl implements IsopretService  {
     @Override
     public List<Visualizable> getDasForGoTerm(TermId goId) {
         double splicingPepThreshold = this.thresholder.getSplicingPepThreshold();
+        LOGGER.info("getDasForGoTerm, splicingPepThreshold={}", splicingPepThreshold);
         List<HbaDealsResult> das = this.thresholder.getRawResults().values()
                 .stream()
                 .filter(h -> h.hasDifferentialSplicingResult(splicingPepThreshold))
-                .collect(Collectors.toList());
+                .toList();
+        LOGGER.info("getDasForGoTerm, das.size={}", das.size());
         // now figure out which of these genes are annotated to goId
         Set<TermId> domainIdSet  = this.transcriptContainer.getDomainItemsAnnotatedByGoTerm(goId);
-        List<String> symbols = das.stream().filter(d -> domainIdSet.contains(d.getGeneAccession().toTermId()))
-                .map(HbaDealsResult::getSymbol)
-                .collect(Collectors.toList());
+        // when we get here, the domain ids are transcript ids.
+        LOGGER.info("getDasForGoTerm, domainIdSet.size={} for go={}", domainIdSet.size(), goId.getValue());
+        Set<String> symbols = new HashSet<>();
+        for (HbaDealsResult result : das) {
+            for (AccessionNumber transcriptAccession : result.getTranscriptMap().keySet()) {
+                if (domainIdSet.contains(transcriptAccession.toTermId())) {
+                    symbols.add(result.getSymbol());
+                    break; // done with this gene
+                }
+            }
+        }
+        LOGGER.info("getDasForGoTerm, symbols.size={} ", symbols.size());
         // transform to visualizable
         List<Visualizable> visualizables = new ArrayList<>();
         for (String sym : symbols) {
